@@ -1,19 +1,18 @@
-#
-# Please keep this sorted alphabetically!
-# 
+# List of source files containing translatable strings.
+# Please keep this file sorted alphabetically.
 app/app_procs.c
 app/autosave.c
 app/color_area.c
 app/commands.c
 app/defaults.c
-app/diaconv.c
+app/dia-props.c
 app/dia_embedd.c
+app/diaconv.c
 app/diagram_tree.c
 app/diagram_tree_menu.c
 app/diagram_tree_window.c
 app/dialogs.c
 app/diapagelayout.c
-app/dia-props.c
 app/disp_callbacks.c
 app/display.c
 app/export_png.c
@@ -42,40 +41,29 @@ dia.desktop.in
 lib/arrows.c
 lib/attributes.c
 lib/bezier_conn.c
-lib/diagramdata.c
-lib/dialibartrenderer.c
 lib/dia_xml.c
+lib/diagramdata.c
+lib/diagtkfontsel.c
+lib/dialibartrenderer.c
 lib/filter.c
 lib/font.c
-lib/diagtkfontsel.c
 lib/message.c
 lib/object_defaults.c
 lib/plug-ins.c
+lib/prop_inttypes.c
+lib/prop_widgets.c
 lib/propdialogs.c
 lib/properties.c
 lib/properties.h
-lib/prop_inttypes.c
-lib/prop_widgets.c
 lib/text.c
 lib/widgets.c
-objects/bondgraph/bondgraph.c
-objects/chronogram/chronogram.c
-objects/chronogram/chronoline.c
-objects/chronogram/chronoref.c
-objects/custom/custom.c
-objects/custom/custom_object.c
 objects/ER/attribute.c
 objects/ER/entity.c
 objects/ER/er.c
 objects/ER/participation.c
 objects/ER/relationship.c
-objects/flowchart/box.c
-objects/flowchart/diamond.c
-objects/flowchart/ellipse.c
-objects/flowchart/flowchart.c
-objects/flowchart/parallelogram.c
-objects/FS/flow.c
 objects/FS/flow-ortho.c
+objects/FS/flow.c
 objects/FS/fs.c
 objects/FS/function.c
 objects/GRAFCET/action.c
@@ -87,24 +75,10 @@ objects/GRAFCET/vector.c
 objects/GRAFCET/vergent.c
 objects/Misc/analog_clock.c
 objects/Misc/libmisc.c
-objects/network/bus.c
-objects/network/network.c
 objects/SADT/annotation.c
 objects/SADT/arrow.c
 objects/SADT/box.c
 objects/SADT/sadt.c
-objects/standard/arc.c
-objects/standard/bezier.c
-objects/standard/beziergon.c
-objects/standard/box.c
-objects/standard/ellipse.c
-objects/standard/image.c
-objects/standard/line.c
-objects/standard/polygon.c
-objects/standard/polyline.c
-objects/standard/standard.c
-objects/standard/textobj.c
-objects/standard/zigzagline.c
 objects/UML/activity.c
 objects/UML/actor.c
 objects/UML/association.c
@@ -112,6 +86,7 @@ objects/UML/class.c
 objects/UML/class_dialog.c
 objects/UML/classicon.c
 objects/UML/component.c
+objects/UML/component_feature.c
 objects/UML/constraint.c
 objects/UML/dependency.c
 objects/UML/generalization.c
@@ -128,10 +103,35 @@ objects/UML/state.c
 objects/UML/state_term.c
 objects/UML/uml.c
 objects/UML/usecase.c
+objects/bondgraph/bondgraph.c
+objects/chronogram/chronogram.c
+objects/chronogram/chronoline.c
+objects/chronogram/chronoref.c
+objects/custom/custom.c
+objects/custom/custom_object.c
+objects/flowchart/box.c
+objects/flowchart/diamond.c
+objects/flowchart/ellipse.c
+objects/flowchart/flowchart.c
+objects/flowchart/parallelogram.c
+objects/network/bus.c
+objects/network/network.c
+objects/standard/arc.c
+objects/standard/bezier.c
+objects/standard/beziergon.c
+objects/standard/box.c
+objects/standard/ellipse.c
+objects/standard/image.c
+objects/standard/line.c
+objects/standard/polygon.c
+objects/standard/polyline.c
+objects/standard/standard.c
+objects/standard/textobj.c
+objects/standard/zigzagline.c
 plug-ins/cgm/cgm.c
-plug-ins/dxf/dxf.c
 plug-ins/dxf/dxf-export.c
 plug-ins/dxf/dxf-import.c
+plug-ins/dxf/dxf.c
 plug-ins/hpgl/hpgl.c
 plug-ins/metapost/metapost.c
 plug-ins/metapost/render_metapost.c
@@ -140,36 +140,41 @@ plug-ins/pstricks/pstricks.c
 plug-ins/pstricks/render_pstricks.c
 plug-ins/python/pydia-render.c
 plug-ins/python/python.c
-plug-ins/shape/shape.c
 plug-ins/shape/shape-export.c
+plug-ins/shape/shape.c
 plug-ins/svg/render_svg.c
-plug-ins/svg/svg.c
 plug-ins/svg/svg-import.c
+plug-ins/svg/svg.c
 plug-ins/wmf/wmf.cpp
 plug-ins/wpg/wpg.c
-plug-ins/xfig/xfig.c
 plug-ins/xfig/xfig-export.c
 plug-ins/xfig/xfig-import.c
+plug-ins/xfig/xfig.c
 plug-ins/xslt/xslt.c
 plug-ins/xslt/xsltdialog.c
 sheets/Assorted.sheet.in
-sheets/chronogram.sheet.in
 sheets/Circuit.sheet.in
-sheets/civil.sheet.in
 sheets/Contact.sheet.in
-sheets/Electric.sheet.in
 sheets/EML.sheet.in
 sheets/ER.sheet.in
-sheets/Flowchart.sheet.in
+sheets/Electric.sheet.in
 sheets/FS.sheet.in
+sheets/Flowchart.sheet.in
 sheets/GRAFCET.sheet.in
-sheets/jigsaw.sheet.in
 sheets/Logic.sheet.in
-sheets/Misc.sheet.in
 sheets/MSE.sheet.in
-sheets/network.sheet.in
+sheets/Misc.sheet.in
 sheets/Pneumatic.sheet.in
 sheets/SADT.sheet.in
 sheets/SDL.sheet.in
-sheets/sybase.sheet.in
 sheets/UML.sheet.in
+sheets/chronogram.sheet.in
+sheets/ciscocomputer.sheet.in
+sheets/ciscohub.sheet.in
+sheets/ciscomisc.sheet.in
+sheets/cisconetwork.sheet.in
+sheets/ciscorouter.sheet.in
+sheets/civil.sheet.in
+sheets/jigsaw.sheet.in
+sheets/network.sheet.in
+sheets/sybase.sheet.in
