@@ -1,3 +1,7 @@
+2003-08-20  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Sorted and added many missing files.
+
 2003-08-18  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Update Norwegian translation.
